[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "invokelens-sdk"
version = "0.1.0"
description = "SDK for InvokeLens — AI Agent Guardrails & Observability Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "InvokeLens", email = "support@invokelens.com" },
]
keywords = [
    "aws",
    "bedrock",
    "agents",
    "observability",
    "monitoring",
    "guardrails",
    "telemetry",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "boto3>=1.28.0",
    "pydantic>=2.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "moto[dynamodb,events]>=4.0",
    "mypy",
    "ruff",
]

[project.urls]
Homepage = "https://invokelens.com"
Repository = "https://github.com/InvokeLens/invokelens-sdk"
Changelog = "https://github.com/InvokeLens/invokelens-sdk/blob/main/CHANGELOG.md"
Documentation = "https://docs.invokelens.com"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
